@@ -1,3 +1,11 @@
+TAG: mrkcoordload-6-0-25-7
+DATE: 03/21/2025
+STAFF: lec
+e4g-127/Process Alliance File to Load SNP_ConsensusSnp_Marker
+remove LASTRUN on SNP server
+        modified:   bin/mrkcoordDelete.sh
+        modified:   bin/mrkcoordload.sh
+
 TAG: mrkcoordload-6-0-25-6
 TAG: mrkcoordload-6-0-25-5
 DATE: 02/21/2025, 02/24/2025
